--- a/registration-form.html
+++ b/registration-form.html
@@ -278,7 +278,7 @@
                                                 href="https://www.facebook.com/AristonIndonesia"
                                                 target="_blank">AristonIndonesia</a></li>
                                         <li>Youtube Ariston Indonesia: <a class="text-danger text-decoration-none"
-                                                href="https://www.youtube.com/channel/UCmRBUh5Ik4gswghHOL1kD1Q"
+                                                href="https://www.youtube.com/@aristonindonesia8668"
                                                 target="_blank">Ariston Indonesia</a></li>
                                     </ul>
                                 </li>
